# binance-bot-be

./: .gitignore  Dockerfile  ReadMe.md  build.sh  docker-compose.yml  main.py  migration.sh  migrations.json  pyproject.toml
config/: env_config.py  index.py
connection/: index.py  setup.py
constant/: index.py
dto/: key_vault.py  order.py  price.py  trading_pairs.py  user.py
middlewares/: index.py  setup_cors.py
migrations/: 0001_migration_202512012045.py  0002_migration_202512012058.py  0003_migration_202512012104.py  0004_migration_202512012108.py
models/: index.py  key_vault.py  order.py  price.py  trading_pair.py  user.py
routes/: account.py  auth.py  bot.py  index.py  key_vault.py  order.py  price.py  trading_pair.py  user.py
swagger/: index.py
utils/: auth.py  email.py  index.py  jwt.py
