[project]
name = "binance-bot-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "colorama>=0.4.6",
    "cryptography>=46.0.3",
    "fastapi>=0.121.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "peewee>=3.18.3",
    "peewee-async>=1.2.1",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.4",
    "python-binance>=1.0.32",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn[standard]>=0.38.0",
]
